Book: added a section on writing scripts in the general tutorial
After various workshops that were held with the tutorial, I felt its
necessary to also introduce readers to writing scripts and best practices
in doing it. I will later add a script for the whole tutorial, and also add
a section in this tutorial on writing Makefiles as a more optimal way of
organizing the processing.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,10 @@ See the end of the file for license conditions.
 
 ** New features
 
+  Book:
+   - The "General program usage tutorial" now has a section on how to write
+     scripts effectively to automate your analysis.
+
   Arithmetic:
    - The new `add-dimension' operator will stack the popped operands in a
      higher-dimensional dataset. For example to build a 3D cube from
