--- a/NEWS
+++ b/NEWS
@@ -118,6 +118,7 @@ See the end of the file for license conditions.
   bug #56999: Compilation error on macOS 10.9 not recognizing AT_FDCWD.
   bug #57057: BuildProgram not using environment LDFLAGS or CPPFLAGS.
   bug #57101: Crop segmentation fault when no overlap exists in image-mode.
+  bug #57164: MakeCatalog crashes when a label isn't in the dataset.
 
 
 
