MakeCatalog: cpscorr is properly set when --instd is a number
Until now the `p->cpscorr' (to correct for counts-per-second datasets), was
only set when an input image was given to `--instd'. As a result, when a
single number was given, it would be zero and `1/p->cpscorr' would become
infinity and the `--sn' column would be `inf'. With this commit, we also
set `p->cpscorr' when the input is a single number.

This bug was reported by Joseph Putko.

This fixes bug #57180.

--- a/NEWS
+++ b/NEWS
@@ -130,6 +130,7 @@ See the end of the file for license conditions.
   bug #57057: BuildProgram not using environment LDFLAGS or CPPFLAGS.
   bug #57101: Crop segmentation fault when no overlap exists in image-mode.
   bug #57164: MakeCatalog crashes when a label isn't in the dataset.
+  bug #57180: MakeCatalog reporting infinity S/N when --instd isn't an image.
 
 
 
