--- a/THANKS
+++ b/THANKS
@@ -63,6 +63,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     William Pence                        william.pence@nasa.gov
     Mamta Pommier                        mamta.pommier@univ-lyon1.fr
     Bob Proulx                           bob@proulx.com
+    Joseph Putko                         josephputko@gmail.com
     Teymoor Saifollahi                   teymur.saif@gmail.com
     Elham Saremi                         saremi@ipm.ir
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
